nullaway_error_6e5b813a-3cbf-4b71-843e-799b06e62449.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TilesetEntry.java:87: error: [NullAway] method returns @Nullable, but superclass method de.gurkenlabs.litiengine.environment.tilemap.ITilesetEntry.getImage() returns @NonNull
  public BufferedImage getImage() {
                       ^
    (see http://t.uber.com/nullaway )
